border radius issues on mobile fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,8 @@ body {
   gap: 24px 30px;
   @media (max-width: 520px) {
     gap: 0;
+    border-radius: 0.25em;
+    overflow: hidden;
     &:nth-child(even){
       background-color: var(--card-bg-darker)!important;
     }
