--- a/src/components/card/Card.scss
+++ b/src/components/card/Card.scss
@@ -15,7 +15,9 @@
   @media (max-width: 520px) {
     padding-left: 40px;
     text-align: left;
+    border-radius: 0;
     &:nth-of-type(even){
+
       background-color: var(--card-bg-darker)!important;
     }
   }
